ignore dockers for showingDesktop state

also use a common funciton to decide whether or
not to break the state

BUG: 305874
FIXED-IN: 4.9.1