client.cpp
@@ -1210,19 +1210,23 @@ void Client::updateVisibility()
             internalHide(Allowed);
         return;
     }
-    if( workspace()->showingDesktop()) {
-        bool belongs_to_desktop = false;
-        for (ClientList::ConstIterator it = group()->members().constBegin();
-                it != group()->members().constEnd();
-                ++it)
-            if ((*it)->isDesktop()) {
-                belongs_to_desktop = true;
-                break;
-            }
-        if (!belongs_to_desktop)
-            workspace()->resetShowingDesktop(true);
-    }
+    resetShowingDesktop(true);
     internalShow(Allowed);
+}
+
+
+void Client::resetShowingDesktop(bool keep_hidden)
+{
+    if (isDock() || !workspace()->showingDesktop())
+        return;
+    bool belongs_to_desktop = false;
+    for (ClientList::ConstIterator it = group()->members().constBegin(),
+                                    end = group()->members().constEnd(); it != end; ++it)
+        if ((belongs_to_desktop == (*it)->isDesktop()))
+            break;
+
+    if (!belongs_to_desktop)
+        workspace()->resetShowingDesktop(keep_hidden);
 }
 
 /**
